--- a/1807.02092/LH.tex
+++ b/1807.02092/LH.tex
@@ -2,7 +2,7 @@
 %\documentstyle[aps,preprint]{revtex}
 %\documentstyle[aps,prl,epsfig]{revtex}
 %%%%%\documentclass[aps,preprint,prl,epsfig]{revtex4}
-\documentclass[aps,amsmath,amssymb,amsfonts,12pt]{revtex4-1}
+\documentclass[aps,amsmath,amssymb,amsfonts,floatfix]{revtex4-1}
 %\documentclass[aps,twocolumn,rmp,epsfig]{revtex4}
 %\documentclass[aps,twocolumn,pra,epsfig]{revtex4}
 %\documentclass[aps,preprint,pra,epsfig]{revtex4}
@@ -21,6 +21,8 @@
 \usepackage{color}
 \usepackage{amsmath}
 
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -34,11 +36,11 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[letterpaper,margin=1.1in]{geometry}
+\usepackage[papersize={6.7in, 10.5in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+
 \linespread{1.0}
 \tolerance=2000
+\hbadness=2000
 \usepackage[small]{titlesec}
 
 %#############################
@@ -553,6 +555,63 @@ through one of the two slits) do {\it not} add, which in turn leads to interfere
 The presence of entanglement eliminates
 local phases (thus suppressing quantum superpositions, i.e. doing the job of decoherence). This leads to additivity of probabilities of  events associated with preferred pointer states. 
 
+\begin{figure*}[htb]
+\begin{tabular}{l}
+\vspace{-0.25in}
+\includegraphics[width=3.6in]{allcards.pdf}\\
+\end{tabular}
+\caption{\footnotesize
+Envariance -- {\it en}tanglement assisted in{\it variance} -- is a symmetry of entangled states. Envariance allows one to demonstrate Born's rule \cite{76,78,75} using a combination of an old intuition of Laplace \cite{40}
+about invariance and the origins of probability and quantum symmetries of entanglement.
+{\bf (a)} Laplace's {\it principle of indifference} (illustrated with playing cards) aims to establish
+ symmetry using invariance under swaps.
+A player who doesn't know face values of cards is  indifferent -- does not care -- if they are swapped before
+he gets the one on the left. For Laplace, this indifference was the evidence of a (subjective) symmetry: 
+%It translated into a subjective assessment of the probability.
+It implied {\it equal likelihood} -- equal probabilities of the invariantly swappable
+alternatives. For the two cards above, subjective probability $p_\spadesuit ={ \frac 1 2}$ would be inferred by someone who doesn't know their face value, but knows that one of them is a spade. 
+%This allows one to assign probabilities to outcomes -- to future events.
+% -- on the basis of symmetry established by invariance of a state under a transformation.
+When probabilities of a set of elementary events are provably equal, one
+%%% was this what was intended
+can compute probabilities of composite events and thus develop a theory of probability. Even the
+additivity of probabilities can be {\it established} (see, e.g., Gnedenko, \cite{32}).
+% given elementary assumptions about the ``algebra of events''. 
+This is in contrast to Kolmogorov's measure-theoretic
+axioms (which {\it include} additivity of probabilities). Above all, Kolmogorov's theory does not assign probabilities to elementary events (physical or otherwise), while envariant approach yields probabilities when symmetries of elementary events under swaps are known. 
+%It only deals with deriving probabilities of composite events from the arbitrarily assigned probabilities of elementary events, which only need to be positive and sum up to unity \cite{32}.
+{\bf (b)} The problem with Laplace's principle of indifference is its subjectivity.
+The actual physical state of the system (the two cards) is altered by
+the swap.  A related problem is that the assessment of indifference is based on ignorance: It
+as was argued, e.g., by supporters of the relative frequency approach (regarded by many as more ``objective'' foundation of probability) that it is impossible to deduce anything 
+(including probabilities) from ignorance. This is (along with subjectivity) was the reason why equal likelihood approach
+%(hence, Laplace's approach) is
+is regarded with suspicion as a basis of probability in physics.
+{\bf (c)} In quantum physics symmetries of entanglement can be used to deduce objective
+probabilities starting with a known state. Envariance is the relevant symmetry.
+When a pure entangled state of a system $\cS$ and another system we call ``an environment $\cE$'' (anticipating connections with decoherence) $
+|\psi_{\cal SE}\rangle = \sum_{k=1}^N a_k |s_k\rangle |\varepsilon_k\rangle $ can be transformed
+by $U_{\cal S}=u_{\cal S} \otimes {\bf 1}_{\cal E}$ acting solely on ${\cal S}$, but the effect of $U_{\cal S}$ can be undone by acting solely on ${\cal E}$ with an appropriately chosen $U_{\cal E}=
+{\bf 1}_{\cal S} \otimes u_{\cal E}$, $U_{\cal E}|\eta_{\cal SE}\rangle  = ({\bf 1}_{\cal S} \otimes
+u_{\cal E}) |\eta_{\cal SE}\rangle = |\psi_{\cal SE}\rangle $, it is envariant under $u_{\cal S}$. For such
+composite states one can rigorously establish that the local state of ${\cal S}$ remains unaffected by
+$u_{\cal S}$. Thus, for example, the phases of the coefficients in the Schmidt expansion
+$|\psi_{\cal SE}\rangle = \sum_{k=1}^N a_k |s_k\rangle |\varepsilon_k\rangle $ are envariant, as the effect of $u_{\cal S}=\sum_{k=1}^N \exp(i \phi_k)|s_k\rangle \langle s_k| $ can be undone by a
+{\it countertransformation} $u_{\cal E}=\sum_{k=1}^N \exp(-i \phi_k)|\varepsilon_k\rangle
+\langle \varepsilon_k| $ acting solely
+on the environment. This envariance of phases implies their
+irrelevance for the local states -- in effect, it implies decoherence. Moreover, when the absolute values of the
+Schmidt coefficients are equal 
+%(as in (c) above), 
+a swap
+$\ket \spadesuit \bra \heartsuit + \ket \heartsuit \bra \spadesuit$ in $\cS$ can be undone by a
+`counterswap' $\ket \clubsuit \bra \diamondsuit + \ket \diamondsuit \bra \clubsuit$ in $\cE$.
+So, as can be established more carefully \cite{78},  $p_\spadesuit = p_\heartsuit=\frac 1 2$
+follows from the objective symmetry of such an entangled state. This proof of equal probabilities is based not on ignorance (as in Laplace's subjective `indifference') but on knowledge of the ``wrong property'' -- of the global observable that rules out (via quantum indeterminacy) any information about complementary local observables. When supplemented by simple counting, envariance leads to Born's rule also for unequal Schmidt coefficients \cite{76,78,75}.
+}
+\label{cards}
+\end{figure*}
+
 \subsection{Decoherence, Phases, and Entanglement}
 
 Decoherence is the loss of phase coherence between preferred states. It occurs when $\cS$ starts in a superposition of pointer states singled out by the interaction (represented below by the Hamiltonian ${{\bf H}_{\cS\cE}}$). As in Eq. (3), states of the system leave imprints -- become `copied' -- but now $\cS$ is `measured' by $\cE$, its environment:
@@ -653,64 +712,6 @@ $$(\alpha \ket \uparrow \ket {A_\uparrow}  + \beta \ket \downarrow \ket {A_\down
 { \stackrel {{\bf H}_{\cA\cE}} \Longrightarrow }
 \alpha \ket \uparrow \ket {A_\uparrow} \ket {\varepsilon_\uparrow}  + \beta \ket \downarrow \ket {A_\downarrow} \ket {\varepsilon_\downarrow} = \ket {\Psi_{\cS\cA\cE}} \eqno(7)$$
 Pointer states $\ket {A_\uparrow}, \ket {A_\downarrow}$ of $\cA$ survive decoherence by $\cE$. They retain perfect correlation with $\cS$ (or an observer, or other systems) in spite of $\cE$, independently of the value of $\bk {\varepsilon_\uparrow} {\varepsilon_\downarrow}$. Stability under decoherence is -- in our quantum Universe -- a prerequisite for effective classicality: Familiar states of macroscopic objects also have to survive monitoring by $\cE$ and, hence, retain correlations.
-
-\newpage
-\begin{figure*}[ht]
-\begin{tabular}{l}
-\vspace{-0.25in}
-\includegraphics[width=3.6in]{allcards.pdf}\\
-\end{tabular}
-\caption{\scriptsize
-Envariance -- {\it en}tanglement assisted in{\it variance} -- is a symmetry of entangled states. Envariance allows one to demonstrate Born's rule \cite{76,78,75} using a combination of an old intuition of Laplace \cite{40}
-about invariance and the origins of probability and quantum symmetries of entanglement.
-{\bf (a)} Laplace's {\it principle of indifference} (illustrated with playing cards) aims to establish
- symmetry using invariance under swaps.
-A player who doesn't know face values of cards is  indifferent -- does not care -- if they are swapped before
-he gets the one on the left. For Laplace, this indifference was the evidence of a (subjective) symmetry: 
-%It translated into a subjective assessment of the probability.
-It implied {\it equal likelihood} -- equal probabilities of the invariantly swappable
-alternatives. For the two cards above, subjective probability $p_\spadesuit ={ \frac 1 2}$ would be inferred by someone who doesn't know their face value, but knows that one of them is a spade. 
-%This allows one to assign probabilities to outcomes -- to future events.
-% -- on the basis of symmetry established by invariance of a state under a transformation.
-When probabilities of a set of elementary events are provably equal, one
-%%% was this what was intended
-can compute probabilities of composite events and thus develop a theory of probability. Even the
-additivity of probabilities can be {\it established} (see, e.g., Gnedenko, \cite{32}).
-% given elementary assumptions about the ``algebra of events''. 
-This is in contrast to Kolmogorov's measure-theoretic
-axioms (which {\it include} additivity of probabilities). Above all, Kolmogorov's theory does not assign probabilities to elementary events (physical or otherwise), while envariant approach yields probabilities when symmetries of elementary events under swaps are known. 
-%It only deals with deriving probabilities of composite events from the arbitrarily assigned probabilities of elementary events, which only need to be positive and sum up to unity \cite{32}.
-{\bf (b)} The problem with Laplace's principle of indifference is its subjectivity.
-The actual physical state of the system (the two cards) is altered by
-the swap.  A related problem is that the assessment of indifference is based on ignorance: It
-as was argued, e.g., by supporters of the relative frequency approach (regarded by many as more ``objective'' foundation of probability) that it is impossible to deduce anything 
-(including probabilities) from ignorance. This is (along with subjectivity) was the reason why equal likelihood approach
-%(hence, Laplace's approach) is
-is regarded with suspicion as a basis of probability in physics.
-{\bf (c)} In quantum physics symmetries of entanglement can be used to deduce objective
-probabilities starting with a known state. Envariance is the relevant symmetry.
-When a pure entangled state of a system $\cS$ and another system we call ``an environment $\cE$'' (anticipating connections with decoherence) $
-|\psi_{\cal SE}\rangle = \sum_{k=1}^N a_k |s_k\rangle |\varepsilon_k\rangle $ can be transformed
-by $U_{\cal S}=u_{\cal S} \otimes {\bf 1}_{\cal E}$ acting solely on ${\cal S}$, but the effect of $U_{\cal S}$ can be undone by acting solely on ${\cal E}$ with an appropriately chosen $U_{\cal E}=
-{\bf 1}_{\cal S} \otimes u_{\cal E}$, $U_{\cal E}|\eta_{\cal SE}\rangle  = ({\bf 1}_{\cal S} \otimes
-u_{\cal E}) |\eta_{\cal SE}\rangle = |\psi_{\cal SE}\rangle $, it is envariant under $u_{\cal S}$. For such
-composite states one can rigorously establish that the local state of ${\cal S}$ remains unaffected by
-$u_{\cal S}$. Thus, for example, the phases of the coefficients in the Schmidt expansion
-$|\psi_{\cal SE}\rangle = \sum_{k=1}^N a_k |s_k\rangle |\varepsilon_k\rangle $ are envariant, as the effect of $u_{\cal S}=\sum_{k=1}^N \exp(i \phi_k)|s_k\rangle \langle s_k| $ can be undone by a
-{\it countertransformation} $u_{\cal E}=\sum_{k=1}^N \exp(-i \phi_k)|\varepsilon_k\rangle
-\langle \varepsilon_k| $ acting solely
-on the environment. This envariance of phases implies their
-irrelevance for the local states -- in effect, it implies decoherence. Moreover, when the absolute values of the
-Schmidt coefficients are equal 
-%(as in (c) above), 
-a swap
-$\ket \spadesuit \bra \heartsuit + \ket \heartsuit \bra \spadesuit$ in $\cS$ can be undone by a
-`counterswap' $\ket \clubsuit \bra \diamondsuit + \ket \diamondsuit \bra \clubsuit$ in $\cE$.
-So, as can be established more carefully \cite{78},  $p_\spadesuit = p_\heartsuit=\frac 1 2$
-follows from the objective symmetry of such an entangled state. This proof of equal probabilities is based not on ignorance (as in Laplace's subjective `indifference') but on knowledge of the ``wrong property'' -- of the global observable that rules out (via quantum indeterminacy) any information about complementary local observables. When supplemented by simple counting, envariance leads to Born's rule also for unequal Schmidt coefficients \cite{76,78,75}.
-}
-\label{cards}
-\end{figure*}
  
 
 Decohered $\cS\cA$ is described by a {\it reduced density matrix}, 
@@ -1035,7 +1036,7 @@ Environments that decohere $\cS$, but scramble information because of interactio
 \begin{figure*}[tb]
 \begin{tabular}{l}
 %\vspace{-0.15in} 
-\includegraphics[width=6.5in]{QMI_plot_a_point_source.pdf}\\
+\includegraphics[width=4.5in]{QMI_plot_a_point_source.pdf}\\
 \end{tabular}
 \caption{The quantum mutual information $I(\cS : \cF_f )$ vs. fragment size $f$ at different elapsed times for an object illuminated by a point-source black-body radiation \cite{RiedelZ12}.
   %Eq. \eqref{mixed_MI}, 
