--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-21 07:46:33 -0400 
+%% Created for Pete Su at 2019-08-22 17:44:07 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Joos2003,
+	Author = {Erich Joos and H. Dieter Zeh and Claus Kiefer and Domenico Giulini and Joachim Kupsch and Ion-Olimpiu Stamatescu},
+	Date-Added = {2019-08-22 17:44:01 -0400},
+	Date-Modified = {2019-08-22 17:44:01 -0400},
+	Doi = {10.1007/978-3-662-05328-7},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Decoherence and the Appearance of a Classical World in Quantum Theory},
+	Url = {https://doi.org/10.1007/978-3-662-05328-7},
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-662-05328-7}}
+
+@book{Schlosshauer2007,
+	Author = {Maximilian Schlosshauer},
+	Date-Added = {2019-08-22 17:41:23 -0400},
+	Date-Modified = {2019-08-22 17:41:47 -0400},
+	Doi = {10.1007/978-3-540-35775-9},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Decoherence and the Quantum-To-Classical Transition},
+	Url = {https://doi.org/10.1007/978-3-540-35775-9},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-540-35775-9}}
 
 @article{Hsu2011,
 	Author = {Hsu, Bailey C. and Berrondo, Manuel and Van Huele, Jean-Fran\ifmmode \mbox{\c{c}}\else \c{c}\fi{}ois S.},
