--- a/superposition/sup.tex
+++ b/superposition/sup.tex
@@ -7,10 +7,15 @@
 \def\da{|M_{1}\rangle}
 \def\db{|M_{2}\rangle}
 \def\m0{| M_0 \rangle}
+\def\M0{ M_0 }
 \begin{document}
 $$\displaystyle |\psi\rangle \m0 = (\a + \b)\m0 \to   \a\da + \b\db
 $$
 
-$$\displaystyle |\psi\rangle  \m0 = \big(\sum_n c_n|\psi_n\rangle\big)  \m0 \to  \sum_n (c_n |\psi_n\rangle  |M_n\rangle)
+$$\displaystyle \psi  \m0 = \big(\sum_n c_n|\psi_n\rangle\big)  \m0 \to  \sum_n (c_n |\psi_n\rangle  |M_n\rangle)
 $$
+
+$$\displaystyle \psi  \otimes \M0 = \big(\sum_n c_n\psi_n\big) \otimes \M0 \to  \sum_n (c_n \psi_n  \otimes M_n)
+$$
+
 \end{document}
