--- a/quant-ph-0405161/PrEn2.tex
+++ b/quant-ph-0405161/PrEn2.tex
@@ -2,7 +2,7 @@
 %\documentstyle[aps,preprint]{revtex}
 %\documentstyle[aps,prl,epsfig]{revtex}
 %%%%%\documentclass[aps,preprint,prl,epsfig]{revtex4}
-\documentclass[aps,twocolumn,pra,epsfig]{revtex4}
+\documentclass[aps,pra,epsfig,11pt,floatfix]{revtex4}
 %\documentstyle[aps,twocolumn,pra]{revtex}
 %\def\lsim{\mathrel{\raise2pt\hbox to 8pt{\raise -5pt\hbox{$\sim$}\hss{$<$}}}}
 %%%%\renewcommand{\baselinestretch}{1.8}
@@ -19,6 +19,29 @@
 \newcommand{\ban}{\begin{eqnarray*}}
 \newcommand{\ean}{\end{eqnarray*}}
 \newcommand{\tl}{\tilde{\ell}}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
 
 \begin{document}
 
@@ -778,10 +801,11 @@ of envariance for the interpretation of quantum theory. This includes
 of the preferred pointer basis.
 
 \begin{figure*}[p]
-\centering %\leavevmode
-\epsfxsize 7in
+\centering %\leavevmode\
+\vskip 10pt
+\epsfxsize 4in
 \epsfbox{allcards.eps}
-\caption{Envariance is related to  the `principle of indifference' (or the `principle of
+\caption{\footnotesize\baselineskip=9pt Envariance is related to  the `principle of indifference' (or the `principle of
 equal likelihood') used by Laplace [17] to define subjective probabilities. However
 in quantum physics envariance leads to {\it probabilities based on an objective 
 symmetries of the underlying physical state of the system}. The principle of indifference 
