--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-22 17:44:07 -0400 
+%% Created for Pete Su at 2019-08-24 11:30:24 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Schlosshauer2005,
+	Author = {Maximilian Schlosshauer and Arthur Fine},
+	Date-Added = {2019-08-24 11:26:17 -0400},
+	Date-Modified = {2019-08-24 11:26:58 -0400},
+	Doi = {10.1007/s10701-004-1941-6},
+	Journal = {Foundations of Physics},
+	Month = feb,
+	Note = {\href{https://arxiv.org/abs/quant-ph/0312058}{arXiv:quant-ph/0312058}},
+	Number = {2},
+	Pages = {197--213},
+	Publisher = {Springer Science and Business Media {LLC}},
+	Title = {{On Zurek's Derivation of the Born Rule}},
+	Url = {https://doi.org/10.1007/s10701-004-1941-6},
+	Volume = {35},
+	Year = {2005},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10701-004-1941-6}}
 
 @book{Joos2003,
 	Author = {Erich Joos and H. Dieter Zeh and Claus Kiefer and Domenico Giulini and Joachim Kupsch and Ion-Olimpiu Stamatescu},
@@ -381,10 +398,11 @@
 @article{Zurek2018,
 	Author = {Wojciech Hubert Zurek},
 	Date-Added = {2019-07-14 10:21:27 -0400},
-	Date-Modified = {2019-07-14 10:22:51 -0400},
+	Date-Modified = {2019-08-24 11:30:15 -0400},
 	Doi = {10.1098/rsta.2018.0107},
 	Eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2018.0107},
 	Journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	Note = {\href{https://arxiv.org/abs/1807.02092}{arXiv:1807.02092}},
 	Number = {2123},
 	Pages = {20180107},
 	Title = {{Quantum Theory of the Classical: Quantum Jumps, Born's Rule and Objective Classical Reality via Quantum Darwinism}},
