--- a/quant-ph-0312058/quant-ph-0312058.tex
+++ b/quant-ph-0312058/quant-ph-0312058.tex
@@ -1,7 +1,28 @@
 
 
-\documentclass[twocolumn,aps,amsmath,amsfonts,showpacs]{revtex4}
-\usepackage[colorlinks=true]{hyperref}
+\documentclass[aps,amsmath,amsfonts,showpacs,12pt]{revtex4}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
 
 
 % abbreviations for commonly used commands:
