--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-24 11:30:24 -0400 
+%% Created for Pete Su at 2019-08-24 22:18:42 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Zurek2005,
+	Author = {Wojciech Hubert Zurek},
+	Date-Added = {2019-08-24 22:16:10 -0400},
+	Date-Modified = {2019-08-24 22:18:42 -0400},
+	Doi = {10.1103/physreva.71.052105},
+	Journal = {Physical Review A},
+	Month = may,
+	Note = {\href{https://arxiv.org/abs/quant-ph/0405161v2}{arxiv:quant-ph/0405161v2}},
+	Number = {5},
+	Publisher = {American Physical Society ({APS})},
+	Title = {{Probabilities from entanglement, Born's rule $p_k=|\psi_k|^2$ from envariance}},
+	Url = {https://doi.org/10.1103/physreva.71.052105},
+	Volume = {71},
+	Year = {2005},
+	Bdsk-Url-1 = {https://doi.org/10.1103/physreva.71.052105}}
 
 @article{Schlosshauer2005,
 	Author = {Maximilian Schlosshauer and Arthur Fine},
