--- a/0706.2661/harrigan_spekkens.tex
+++ b/0706.2661/harrigan_spekkens.tex
@@ -15,7 +15,10 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+%\usepackage[small]{titlesec}
 \sloppy
 \usepackage{amsfonts}
 \usepackage{amsmath}
