--- a/bib.bib
+++ b/bib.bib
@@ -1,24 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-26 20:12:48 -0400 
+%% Created for Pete Su at 2019-08-26 20:25:13 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{MOHRHOFF2004,
-	Author = {Ulrich Mohroff},
+@article{Mohrhoff2004,
+	Author = {Ulrich Mohrhoff},
 	Date-Added = {2019-08-26 20:12:26 -0400},
-	Date-Modified = {2019-08-26 20:12:48 -0400},
+	Date-Modified = {2019-08-26 20:25:13 -0400},
 	Doi = {10.1142/s0219749904000195},
 	Journal = {International Journal of Quantum Information},
 	Month = jun,
 	Number = {02},
 	Pages = {221--229},
 	Publisher = {World Scientific Pub Co Pte Lt},
-	Title = {{PROBABILITIES} {FROM} {ENVARIANCE}?},
+	Title = {{Probabilities from envariance?}},
 	Url = {https://doi.org/10.1142/s0219749904000195},
 	Volume = {02},
 	Year = {2004},
