--- a/quant-ph-0607005/qmexplained.tex
+++ b/quant-ph-0607005/qmexplained.tex
@@ -1,4 +1,6 @@
 \documentclass[12pt]{article}
+\usepackage{amsmath}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -115,7 +117,7 @@ Pondicherry 605002 India\\
 \pagebreak
 %______________________________________________________
 \section{Introduction}
-In the very first section of his brilliant Caltech lectures,~\cite{Feynmanteach} Feynman raises a question of concern to every physics teacher: ``Should we teach the {\it correct\/} but unfamiliar law with its strange and difficult conceptual ideas~\dots? Or should we first teach the simple~\dots law, which is only approximate, but does not involve such difficult ideas? The first is more exciting, more wonderful, and more fun, but the second is easier to get at first, and is a first step to a real understanding of the second idea.'' With all due respect to one of the greatest physicists of the 20th Century, I cannot bring myself to agree. How can the second approach be a step to a real understanding of the correct law if ``{\it philosophically we are completely wrong\/} with the approximate law,'' as Feynman himself emphasizes in the immediately preceding paragraph? To first teach laws that are completely wrong philosophically cannot but impart a conceptual framework that eventually stands in the way of understanding the correct laws. The damage done by imparting philosophically wrong ideas to young students is not easily repaired. 
+In the very first section of his brilliant Caltech lectures, Feynman~\cite{Feynmanteach}  raises a question of concern to every physics teacher: ``Should we teach the {\it correct\/} but unfamiliar law with its strange and difficult conceptual ideas~\dots? Or should we first teach the simple~\dots law, which is only approximate, but does not involve such difficult ideas? The first is more exciting, more wonderful, and more fun, but the second is easier to get at first, and is a first step to a real understanding of the second idea.'' With all due respect to one of the greatest physicists of the 20th Century, I cannot bring myself to agree. How can the second approach be a step to a real understanding of the correct law if ``{\it philosophically we are completely wrong\/} with the approximate law,'' as Feynman himself emphasizes in the immediately preceding paragraph? To first teach laws that are completely wrong philosophically cannot but impart a conceptual framework that eventually stands in the way of understanding the correct laws. The damage done by imparting philosophically wrong ideas to young students is not easily repaired. 
 
 Feynman himself has demonstrated that a theory as complex as quantum electrodynamics can be explained to a general audience in just four lectures~\cite{QED}. He even told his audience that ``[b]y explaining quantum electrodynamics to you in terms of what we are \textit{really doing} [original emphasis], I hope you will be able to understand it better than do some of the students.'' If it is possible, in four lectures, to make a lay audience understand quantum electrodynamics better than some students of physics, then there has to be something wrong with the conventional methods of teaching physics.
 
@@ -481,15 +483,15 @@ Consider, for example, the ESW experiment mentioned in Section~\ref{SecAxiom2}. 
 \ket{V_{ESW}}=\frac1{\sqrt2}\Bigl[\ket{L,\lambda}+\ket{R,\rho}\Bigr],
 \ee
 where $\ket L$, $\ket R$, $\ket\lambda$, and $\ket\rho$ stand for the following measurement outcomes: atom went through the left slit, atom went through the right slit, photon is detected in the left cavity, photon is detected in the right cavity. The joint probability of obtaining the respective outcomes $\hP_a$ and $\hP_\gamma$ in measurements performed on the component systems equals
-\bea
+\begin{multline}
 \label{EQesw}
-&&\frac12\Bigl[\bra{L,\lambda}+\bra{R,\rho}\Bigr]\Bigl[\hP_a\otimes\hP_\gamma\Bigr]
-\Bigl[\ket{L,\lambda}+\ket{R,\rho}\Bigr]\;=\\
-&&\frac12\Bigl[\sandwich L{\hP_a}L\sandwich\lambda{\hP_\gamma}\lambda+
+\frac12\Bigl[\bra{L,\lambda}+\bra{R,\rho}\Bigr]\Bigl[\hP_a\otimes\hP_\gamma\Bigr]
+\Bigl[\ket{L,\lambda}+\ket{R,\rho}\Bigr]\; =\\
+\frac12\Bigl[\sandwich L{\hP_a}L\sandwich\lambda{\hP_\gamma}\lambda+
 \sandwich R{\hP_a}R\sandwich\rho{\hP_\gamma}\rho+
-\sandwich L{\hP_a}R\sandwich\lambda{\hP_\gamma}\rho+
-\sandwich R{\hP_a}L\sandwich\rho{\hP_\gamma}\lambda\Bigr].\nonumber
-\eea
+\sandwich L{\hP_a}R\sandwich\lambda{\hP_\gamma}\rho+\\
+\sandwich R{\hP_a}L\sandwich\rho{\hP_\gamma}\lambda\Bigr].
+\end{multline}
 Set $\hP_a$ equal to either $\ketbra LL$ or $\ketbra RR$ and $\hP_\gamma$ equal to either $\ketbra\lambda\lambda$ or $\ketbra\rho\rho$, and find that $p(L,\lambda)=p(R,\rho)=1/2$ and $p(R,\lambda)=p(L,\rho)=0$. The outcomes are perfectly correlated. It is therefore possible to infer from a measurement of the cavity containing the photon what we would have found if we had measured the slit taken by the atom. Thus Rule~A should apply. Let us see if it does. If the content of the microwave cavities remains unexamined, then $\hP_\gamma=\hI$, so that Eq.~(\ref{EQesw}) reduces to
 \be
 p(\hP_a)=\frac12\Bigl[\sandwich L{\hP_a}L+\sandwich R{\hP_a}R\Bigr].
