--- a/1411.1146/QM_in_a_new_light_arXiv.tex
+++ b/1411.1146/QM_in_a_new_light_arXiv.tex
@@ -16,8 +16,31 @@
 %grestore
 %\end{filecontents*}
 \RequirePackage{fix-cm}
-\documentclass[smallcondensed]{svjour3ujm}
-\smartqed
+\documentclass[12pt]{article}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
 \usepackage{graphicx}
 \usepackage[authoryear]{natbib}
 \newcommand{\braket}[2]{\langle#1|#2\rangle}
@@ -34,21 +57,12 @@
 \begin{document}
 \title{Quantum Mechanics in a New Light}
 \author{Ulrich J. Mohrhoff}
-\institute{Ulrich J. Mohrhoff\\
-Sri Aurobindo International Centre of Education\\Pondicherry 605002 India\\
-Tel.: +91-93454-21357\\
-\email{ujm@auromail.net}\\
-\\
-\textbf{The final publication is available at\\
-http://link.springer.com/article/10.1007/s10699-016-9487-6\\
-\\
-Published in Foundations of Science DOI 10.1007/s10699-016-9487-6\\
-}}
+\date{30 Apr 2017}
 %\date{Received: date / Accepted: date}
 \maketitle
 \begin{abstract}
 Although the present paper looks upon the formal apparatus of quantum mechanics as a calculus of correlations, it goes beyond a purely operationalist interpretation. Having established the consistency of the correlations with the existence of their correlata (measurement outcomes), and having justified the distinction between a domain in which outcome-indicating events occur and a domain whose properties only exist if their existence is indicated by such events, it explains the difference between the two domains as essentially the difference between the manifested world and its manifestation. A single, intrinsically undifferentiated Being manifests the macroworld by entering into reflexive spatial relations. This atemporal process implies a new kind of causality and sheds new light on the mysterious nonlocality of quantum mechanics. Unlike other realist interpretations, which proceed from an evolving-states formulation, the present interpretation proceeds from Feynman's formulation of the theory, and it introduces a new interpretive principle, replacing the collapse postulate and the eigenvalue--eigenstate link of evolving-states formulations. Applied to alternatives involving distinctions between regions of space, this principle implies that the spatiotemporal differentiation of the physical world is incomplete. Applied to alternatives involving distinctions between things, it warrants the claim that, intrinsically, all fundamental particles are identical in the strong sense of numerical identical. They are the aforementioned intrinsically undifferentiated Being, which manifests the macroworld by entering into reflexive spatial relations.
-\keywords{Identical particles \and Macroscopic objects \and Measurement problem \and Nonlocality \and Quantum mechanics \and Semantic consistency}
+
 \end{abstract}
 
 \section{Introduction}\label{sec:intro}
@@ -268,7 +282,7 @@ Bohr, N. (1939). The causality problem in atomic physics. In \emph{New theories 
 Busch, P., Lahti, P. J., \& Mittelstaedt, P. (1996). \emph{The quantum theory of measurement}, 2nd Revised Edition. Berlin: Springer. 
 
 \bibitem[Chalmers(1995)]{Chalmers}
-Chalmers, D. J. (1995). Facing up to the problem of consciousness. \emph{Journal of Consciousness Studies} 2(3), 200--219. 
+Chalmers, D. J. (1995). Facing up to the problem of consciousness. \emph{Journal of Consciousness Studies} 2(3), 200--219. 
 
 \bibitem[Clifton and Halvorson(2002)]{CH}
 Clifton, R., \& Halvorson, H. (2002). No place for particles in relativistic quantum theories. \emph{Philosophy of Science} 69, 1--28. Reprinted in J. Butterfield \& H. Halvorson (Eds.), \emph{Quantum entanglements: selected papers by Rob Clifton}, pp.\ 225--261. Oxford: Oxford University Press (2004).
