--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-26 20:51:05 -0400 
+%% Created for Pete Su at 2019-08-27 21:03:48 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Altarelli2017,
+	Author = {Guido Altarelli},
+	Date-Added = {2019-08-27 21:03:38 -0400},
+	Date-Modified = {2019-08-27 21:03:38 -0400},
+	Doi = {10.1007/978-3-319-51920-3},
+	Editor = {James Wells},
+	Publisher = {Springer International Publishing},
+	Title = {Collider Physics within the Standard Model},
+	Url = {https://doi.org/10.1007/978-3-319-51920-3},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-319-51920-3}}
 
 @article{Mohrhoff2017,
 	Abstract = {Although the present paper looks upon the formal apparatus of quantum mechanics as a calculus of correlations, it goes beyond a purely operationalist interpretation. Having established the consistency of the correlations with the existence of their correlata (measurement outcomes), and having justified the distinction between a domain in which outcome-indicating events occur and a domain whose properties only exist if their existence is indicated by such events, it explains the difference between the two domains as essentially the difference between the manifested world and its manifestation. A single, intrinsically undifferentiated Being manifests the macroworld by entering into reflexive spatial relations. This atemporal process implies a new kind of causality and sheds new light on the mysterious nonlocality of quantum mechanics. Unlike other realist interpretations, which proceed from an evolving-states formulation, the present interpretation proceeds from Feynman's formulation of the theory, and it introduces a new interpretive principle, replacing the collapse postulate and the eigenvalue--eigenstate link of evolving-states formulations. Applied to alternatives involving distinctions between regions of space, this principle implies that the spatiotemporal differentiation of the physical world is incomplete. Applied to alternatives involving distinctions between things, it warrants the claim that, intrinsically, all fundamental particles are identical in the strong sense of numerical identical. They are the aforementioned intrinsically undifferentiated Being, which manifests the macroworld by entering into reflexive spatial relations.},
