--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-27 21:03:48 -0400 
+%% Created for Pete Su at 2019-08-29 07:04:16 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Schaffer2019,
+	Abstract = {This essay provides a short introduction to the ideas and potential implications of quantum physics for scholars in the arts, humanities, and social sciences. Quantum-inspired ideas pepper current discourse in all of these fields, in ways that range from playful metaphors to sweeping ontological claims. We explain several of the most important concepts at the core of quantum theory, carefully delineating the scope and bounds of currently established science, in order to aid the evaluation of such claims. In particular, we emphasize that the smallest units of matter and light, as described in quantum physics, are not things, meaning that they do not obey the logic we take for granted when discussing the behavior of macroscopic objects. We also highlight the substantial debate that exists within physics about the interpretation of the equations and empirical results at the core of quantum physics, noting that implicit (and contested) philosophical commitments necessarily accompany any discussion of quantum ideas that takes place in non-technical language.},
+	Author = {Schaffer, Kathryn and Barreto Lemos, Gabriela},
+	Date-Added = {2019-08-29 07:03:19 -0400},
+	Date-Modified = {2019-08-29 07:04:16 -0400},
+	Day = {24},
+	Doi = {10.1007/s10699-019-09608-5},
+	Issn = {1572-8471},
+	Journal = {Foundations of Science},
+	Month = {May},
+	Note = {\href{https://arxiv.org/abs/1908.07936}{arXiv:1908.07936}},
+	Title = {{Obliterating Thingness: An Introduction to the ``What'' and the ``So What'' of Quantum Physics}},
+	Url = {https://doi.org/10.1007/s10699-019-09608-5},
+	Year = {2019},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10699-019-09608-5}}
 
 @book{Altarelli2017,
 	Author = {Guido Altarelli},
