--- a/1908.07936/1908.07936.tex
+++ b/1908.07936/1908.07936.tex
@@ -1,5 +1,5 @@
 %\documentclass[smallextended]{article}       % onecolumn (second format)
-\documentclass[onecolumn,preprintnumbers,amsmath,amssymbn,reprint,nofootinbib,superscriptaddress]{revtex4}    % twocolumn
+\documentclass[12pt,onecolumn,preprintnumbers,amsmath,amssymbn,reprint,nofootinbib,superscriptaddress]{revtex4}    % twocolumn
 %\documentclass[superscriptaddress]{article}
 
 %\usepackage[hang, flushmargin]{footmisc}         %Problem line.
@@ -16,6 +16,27 @@
 \usepackage[normalem]{ulem}
 \usepackage{color}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
 
 \begin{document}
 
